# UnifyNetSDK

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  glob_path.py  howtouse.md  readme.md  requirements.txt  setup.cfg  setup.py  test.py  todo.txt
UnifyNetSDK/: __init__.py  define.py  howtouse.md  parameter.py  utils.py
UnifyNetSDK/dahua/: __init__.py  dahuasdk.py  dh_exception.py  dh_netsdk.py  dh_netsdk_exception.py  dh_playsdk.py  dh_playsdk_exception.py  dh_playsdk_wrapper.py
UnifyNetSDK/dahua/Exception/: netsdk_exception.xlsx  手动处理审查错误代码.xlsx
UnifyNetSDK/dahua/netsdk/: __init__.py  dh_netsdk.py
UnifyNetSDK/dahua/playsdk/: dh_playsdk.py  dh_playsdk_exception.py  dh_playsdk_wrapper.py
UnifyNetSDK/dahua/tests/: CustomDahua.py  catchPic.py  catchPicInterFace.py  delete.py  demoWidget.py  minAsyncDownload.py  minDownload.py  minSyncDownload.py  operation_ntp.py  operation_time.py  recycle.py  test_dahuasdk.py  test_playsdk.py
UnifyNetSDK/gen_ctypes_file/: .clang-format  dahua_ctypesgen_log.txt  description.md  format.py  one_dragon_service.py
UnifyNetSDK/gen_ctypes_file/_1_original/: DH_PlaySDK.h  HK_PlaySDK.h
UnifyNetSDK/gen_ctypes_file/_2_formatted/: HK_NetSDK.h
UnifyNetSDK/gen_ctypes_file/_3_replace/: DH_NetSDK.h  replace.py  replace_log.txt
UnifyNetSDK/gen_ctypes_file/formatted/: DH_NetSDK.h  HK_NetSDK.h
UnifyNetSDK/haikang/: HK_Exception.py  __init__.py  haikangsdk.py  hk_exception.py  hk_netsdk.py  hk_netsdk_exception.py  hk_palysdk.py  hk_playsdk.py  hk_playsdk_exception.py  hk_playsdk_wrapper.py
UnifyNetSDK/haikang/Exception/: playsdk_exception.xlsx  手动处理审查错误代码.xlsx
UnifyNetSDK/haikang/ctypegen/: _first_half_constant_.py  _most_constant.py  _most_functions.py  _second_half_constant_.py  haikang_headfile.py  split_code.py
UnifyNetSDK/haikang/headfile/: cpp_hc_head_file.h
UnifyNetSDK/haikang/netsdk/: __init__.py  haikangsdk.py  hk_netsdk.py
UnifyNetSDK/haikang/origin_head_file/: HCNetSDK.py  test_main.py
UnifyNetSDK/haikang/playsdk/: __hk_playsdk_wrapper.py
UnifyNetSDK/haikang/test/: pathonpath.py  (+1 more)
gen_ctypes_file/: one_dragon_service.py
gen_exception_file/: utils.py
tests/: dahua_minAsyncDownload.py  haikang_minAsyncDownload.py  single_instance_test.py  test_dahua_playsdk.py  test_haikang_playsdk.py  unifynetsdk_test.py
(+41 files in other folders)
