[metadata]
name = UnifyNetSDK
version = 1.2.1
license = BSD-2-Clause
description = C转python及统一调用接口的SDK框架
url = https://gitee.com/picklemorty/UnifyNetSDK
long_description = file: README.md, LICENSE, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Natural Language :: Chinese (Simplified)
    Development Status :: 4 - Beta
    Operating System :: Microsoft :: Windows
    Intended Audience :: Developers
    Topic :: Software Development :: Code Generators
    Environment :: Win32 (MS Windows)
keywords='ctypes ctypesgen dahua haikang',



[options]
include_package_data = True
setup_requires = setuptools>=44
; install_requires = [''],
python_requires = >=3.8
packages=find:

; 有时间测试一下，下面这些应该是无效的
; TODO 还有上面新家的loguru会不会自动安装
[options.packages.find]
exclude =
    gen_ctypes_file*
    gen_exception_file*
    tests*
    .idea*
    .vscode*
